--- a/src/views/noticeWrite/noticeWrite.css
+++ b/src/views/noticeWrite/noticeWrite.css
@@ -1,6 +1,27 @@
-#inputNotiFormDiv {
+#inputNoticeFormDiv {
   border: 2px solid #000000;
   border-radius: 10px;
   width: 900px;
-  height: 500px;
+
+  margin: 0 auto;
+  padding: 22px;
+}
+
+#noticeTitle {
+  border: 2px solid #000000;
+  width: 850px;
+
+  margin-bottom: 20px;
+}
+
+#contentEdit {
+  margin-top: 20px;
+  border: 2px solid #000000;
+  width: 850px;
+  height: 400px;
+  margin: 0 auto;
+}
+
+#noticeContent {
+  display: none;
 }
