feat:final Design

--- a/src/views/noticeDetail/noticeDetail.html
+++ b/src/views/noticeDetail/noticeDetail.html
@@ -31,7 +31,7 @@
         id="nav"
       ></nav>
 
-      <section class="">
+      <section id="section">
         <form id="updateform">
           <div id="content">
             <div id="notice_upper">
@@ -42,6 +42,13 @@
           </div>
         </form>
       </section>
+      <input
+        type="button"
+        value="뒤로가기"
+        onclick="history.back();"
+        id="goBack"
+      />
+
       <section class="footerSection"></section>
       <footer id="footer"></footer>
     </div>
