--- a/src/views/noticeDetail/noticeDetail.css
+++ b/src/views/noticeDetail/noticeDetail.css
@@ -19,29 +19,43 @@
 #noticeTitle {
   width: 70%;
   height: 100px;
-  border: 2px solid #ff0000;
+  border: 2px solid #000000;
   border-radius: 10px;
   margin: 0 2% auto;
   margin-top: 30px;
+  text-align: center;
+}
+
+#noticeTitle > strong {
+  margin-top: 20px;
+  font-size: 30px;
 }
 
 #noticeDate {
   width: 24%;
   height: 100px;
-  border: 2px solid #ff0000;
+  border: 2px solid #000000;
   border-radius: 10px;
   margin: 0 2% 0 0 auto;
   margin-top: 30px;
+  text-align: center;
+  padding-top: 20px;
+  background-color: #d3d3d3;
 }
+#noticeDate > strong {
+  margin-top: 30px;
 
+  font-size: 30px;
+}
 #noticeContent {
   width: 94%;
   min-height: 400px;
-  border: 2px solid #00ff00;
+  border: 2px solid #000000;
   border-radius: 10px;
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 30px;
+  padding: 20px;
 }
 
 #btnDiv {
@@ -51,7 +65,7 @@
 }
 
 #btnDiv {
-  border: 1px sold #0000ff;
+  border: 1px sold #000000;
   display: flex;
   flex-direction: column;
 }
@@ -59,4 +73,22 @@
 #btnDiv > button {
   border-radius: 10px;
   margin: 5px 0px auto;
+}
+
+#wrapA {
+  width: 400px;
+  height: 40px;
+  margin: 0 auto;
+}
+
+#goBack {
+  border: 2px solid #000000;
+  border-radius: 5px;
+  width: 400px;
+  height: 40px;
+  margin: 0 auto;
+}
+
+#section {
+  margin-bottom: 30px;
 }
