인국님 브랜치 머지

--- a/src/views/order/order.html
+++ b/src/views/order/order.html
@@ -50,7 +50,7 @@
                       class="input form-control"
                       name="email"
                       id="fullNameInput"
-                      type="email"
+                      type="text"
                       placeholder="유재석"
                       autocomplete="on"
                     />
@@ -68,10 +68,12 @@
                   </div>
                   <div>
                     <div class="d-flex justify-content-between">
-                      <label class="form-label" name="address">주소</label>
-                      <button class="btn btn-primary" id="searchAddress">
-                        주소 찾기
-                      </button>
+                      <label
+                        class="form-label btn btn-primary"
+                        name="address"
+                        id="searchAddress"
+                        >주소 찾기</label
+                      >
                     </div>
                     <input
                       class="input form-control"
