--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -91,13 +91,13 @@
                     로그인
                   </button>
                 </form>
-                <div class="text-center mt-4">
+                <!-- <div class="text-center mt-4">
                   <p id="forget-password">
                     비밀번호를 잊어버리셨다면? ➡
                     <span id="sendEmail">메일로 받기</span>
                   </p>
-                </div>
-                <div>
+                </div> -->
+                <!-- <div>
                   <form id="resetForm" class="d-none text-center">
                     <input
                       type="email"
@@ -115,7 +115,7 @@
                       value="비밀번호 초기화"
                     />
                   </form>
-                </div>
+                </div> -->
               </div>
             </div>
             <div class="col-4"></div>
